<package>
  <name>moveit_external_octomap_updater</name>
  <version>0.1.0</version>
  <description>A plugin to use externally generated octomaps</description>
  <author email="cyrille.morin@free.fr">Cyrille Morin</author>
  <maintainer email="cyrille.morin@free.fr">Cyrille Morin</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_perception</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <export>
    <moveit_ros_perception plugin="${prefix}/moveit_external_octomap_updater_plugin_description.xml"/>
  </export>

</package>
